feat: migrate callbacks to OIDC
